<resources>
    <string name="categoria1">panaderia</string>
    <string name="categoria2">postres</string>
    <string name="categoria3">bebidas</string>
    <string name="editar_producto">lapiz</string>
    <string name="eliminar_producto">garbage</string>
    <string name="nav_inicio">Inicio</string>
    <string name="nav_pedidos">Pedidos</string>
    <string name="nav_estadisticas">Estadísticas</string>
    <string name="nav_perfil">Perfil</string>
    <string name="panaderia">Panaderia</string>
    <string name="postres">Postres</string>
    <string name="bebidas">Bebidas</string>
    <string name="btnadd">Botonadd</string>
    <string name="textvprod">Productos</string>
    <string name="texvcateg">Categorias</string>
    <string name="label_profile_name">Nombre de Usuario</string>
    <string name="textname">Luis Garzón</string>
    <string name="label_profile_email">Correo Electronico</string>
    <string name="txt_profile_email">luisgar@gmail.com</string>
    <string name="label_profile_phone">Teléfono</string>
    <string name="txt_profile_phone">+57 74589123</string>
    <string name="alt_info_name">infoname</string>
    <string name="alt_info_email">infoemail</string>
    <string name="alt_info_phone">infophone</string>
    <string name="alt_logout">logout</string>
    <string name="alt_login_logo">loginlogo</string>
    <string name="nav_ubicación">Ubicación</string>
    <string name="btn_profile_confirm">Confirmar</string>
    <string name="txt_profile_form_title">Actualizar</string>
    <string name="hint_field_profile_name">Nombre</string>
    <string name="hint_field_profile_email">Correo Electronico</string>
    <string name="hint_field_profile_phone">Telefono</string>
    <string name="btncerrse">Cerrar Sesión</string>
    <string name="btnactinf">Actualizar información</string>
    <string name="textvpanpan">Pan Pan</string>
    <string name="imgvbag">imgbag</string>
    <string name="imagvcroiss">imgcroiss</string>
    <string name="textViewbag">Pan Baggette</string>
    <string name="textViewcroiss">Croissant</string>
    <string name="imgc">Croissa</string>
    <string name="textViewnbprec">$ 3.000</string>
    <string name="textViewncrprec">$ 4.500</string>
    <string name="shopcar">shoppcar</string>
    <string name="app_name">Pan_pan</string>
</resources>