<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formulario_Cliente"
    android:background="#F7F6ED"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cafe_oscuro"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="Mi Perfil"
        app:titleTextColor="@color/white"
        />


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/alt_login_logo"
        android:src="@drawable/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.cardview.widget.CardView
        android:layout_width="347dp"
        android:layout_height="403dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="19dp"
        android:background="@color/white"
        android:backgroundTint="#CBF4F3F3"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/txt_profile_form_title"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints="Lorem ipsum"
                android:background="@color/white"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:hint="@string/hint_field_profile_name"
                android:inputType="text"
                android:fontFamily="@font/poppins"
                android:minHeight="48dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/edt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints="Lorem ipsum"
                android:background="@color/white"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:hint="@string/hint_field_profile_email"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="17sp"
                android:fontFamily="@font/poppins"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:autofillHints="Lorem ipsum"
                android:background="@color/white"
                android:drawableStart="@drawable/baseline_call_24"
                android:hint="@string/hint_field_profile_phone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="10dp"
                android:fontFamily="@font/poppins"
                />

            <Button
                android:id="@+id/btn_confirmar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="#5B4850"
                android:text="@string/btn_profile_confirm"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>